tests/snapshots/examples_fixtures/type_classes__MultiEffectTracerExample__Flow__Clock.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/MultiEffectTracerExample/Flow/Clock.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `MultiEffectTracerExample.Flow.Clock` doesn't match file path `examples/type_classes/MultiEffectTracerExample/Flow/Clock.flx`.

  examples/type_classes/MultiEffectTracerExample/Flow/Clock.flx:1:1
  |
1 | module MultiEffectTracerExample.Flow.Clock {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
